# amica-python

./: .gitignore  AMICA_AUDIT.md  AMICA_GAPS_AND_FIXES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORTRAN_VALIDATION_GUIDE.md  HANDOFF.md  LICENSE  MNE_ISSUE.md  README.md  pyproject.toml
amica_python/: __init__.py  accumulators.py  backend.py  binary.py  config.py  likelihood.py  metrics.py  mne_integration.py  pdf.py  preprocessing.py  solver.py  updates.py  viz.py
tests/: test_against_fortran.py  test_amica.py  test_metrics.py  test_mne_contract.py
validation/: audit_post_f1_direct.py  benchmark_chunking.py  benchmark_report.py  compare_20iter.py  compile_benchmark_report.py  generate_paper_tables.py  generate_publication_figures.py  plot_eeglab_style.sh  plot_topos_v2.py  preprocessing_studnicki.py  profile_cpu.py  quick_full_check.py  quick_topos.py  run_eeglab_amica.m  run_highdens_validation.py  run_rejection_ablation.py  run_validation.py  submit_audit_post_f1.sh  submit_benchmark.sh  submit_benchmark_chunking.sh  submit_benchmark_gpu.sh  submit_benchmark_report_cpu.sh  submit_benchmark_report_gpu.sh  submit_chunking_mne.sh  submit_clean_eeg.sh  submit_compare_20iter_cpu.sh  submit_compare_20iter_gpu.sh  submit_eeglab_amica.sh  submit_final_parity.sh  submit_fixture_parity.sh  submit_fortran17_sub01.sh  submit_fortran_sub01.sh  submit_full_validation.sh  submit_full_validation_gpu.sh  submit_mne_endtoend.sh  submit_parity_cpu.sh  submit_profile_cpu.sh  submit_test_fix_init.sh  submit_test_presphered_cpu.sh  submit_test_sphere.sh  (+12 more)
(+65 files in other folders)
