[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amica-python"
version = "0.1.0"
description = "Native Python AMICA (Adaptive Mixture ICA) for MNE-Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    {name = "Sina Esmaeili", email = "sina.esmaeili@umontreal.ca"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
jax = ["jax[cpu]>=0.4"]
gpu = ["jax[cuda12]>=0.4"]
mne = ["mne>=1.0"]
dev = ["pytest>=7.0", "mne>=1.0", "matplotlib>=3.5", "pre-commit>=3.0", "ruff>=0.9"]
all = ["jax[cpu]>=0.4", "mne>=1.0", "matplotlib>=3.5", "pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/snesmaeili/amica-python"
Repository = "https://github.com/snesmaeili/amica-python"

[tool.setuptools.packages.find]
include = ["amica_python*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["amica_python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
